v0.8.0
* Whole words option integrated in the XBL input textbox.
* Per-site substitution: now you can define a list of substitution groups, where
  every group has an URL list and a substitution list; the substitutions are
  applied only if the URL of the current page matches one of the URLs in the
  list or if the list is empty.
* Substitution list stored in XML.
* Updated help.
* New prototypes for FxRSubstitution and FxRSubstitutionGroup.
* String changes:
  - bindings.dtd: new: wholeWords.
  - foxreplace.dtd: removed: replaceBarWholeWords.label,
    replaceBarWholeWords.accesskey.
  - help.dtd: several new, modified and removed strings.
  - options.dtd: lots of changes.
  - substitutiongroupeditor.dtd: all new.
  - foxreplace.properties: new: text, wholewords, regexp, noSubstitutionsTitle,
    noSubstitutionsDescription.

v0.7.3 (18-8-2008)
* Less crowded replace bar (new input textbox with XBL).
* New XBL input textbox also in options dialog.
* Better replace bar theme for macfoxIIgraphite.
* New strings:
  - bindings.dtd: all.
* Removed strings:
  - foxreplace.dtd: replaceBarInputRegExp.label,
    replaceBarInputRegExp.accesskey.
  - options.dtd: inputRegExp.label, inputRegExp.accesskey.

v0.7.2 (5-8-2008)
* Corrected description in foxreplace.properties. It was cut with a \ at the
  end, creating a bug that didn't allow to import a replace list.
* New locale:
  - de-DE (by CosmicForce).
* Changed strings:
  - foxreplace.properties: extensions.fox@replace.fx.description.

v0.7.1 (15-7-2008)
* URL substitutions (thanks to Lutay Sergey).
* Replace only whole words (thanks to Пирятинский Виталий for the suggestion).
* Entitized help (thanks to Goofy).
* New locales:
  - fr-FR (by Jojaba - BabelZilla).
  - pl-PL (by Wacław Jacek).
  - pt-BR (by Alberto Eidh).
  - ru-RU (by Пирятинский Виталий).
* New strings:
  - foxreplace.dtd: replaceBarWholeWords.label, replaceBarWholeWords.accesskey.
  - options.dtd: wholeWords.label, wholeWords.accesskey, wholeWordsHeader.